# plant-genomics-mcp

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.http  LICENSE  README.md  REGISTRIES.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  codeql.yml  docker.yml  publish-registry.yml  release.yml  test.yml
docs/: benchmarking.md
docs/superpowers/audits/: 2026-05-23-bar-api-probe.md  2026-05-23-competitor-landscape.md  2026-05-23-feature-test-code-audit.md  2026-05-23-pre-1.0-readiness.md  2026-05-23-security-audit.md
docs/superpowers/plans/: 2026-05-21-p3-v0.7-bio-breadth.md  2026-05-22-hosted-streamable-http-plan.md  2026-05-22-v0.8-synthesis-plan.md  2026-05-23-v0.9-multi-organism-resolver-plan.md
docs/superpowers/specs/: 2026-05-21-p3-bio-breadth-design.md  2026-05-22-hosted-streamable-http-design.md  2026-05-22-v0.8-synthesis-design.md  2026-05-23-v0.9-multi-organism-resolver-design.md
examples/: README.md  _demo_stdio.py  _run_chain.py  _run_cross_organism_chain.py  _run_synthesis_chain.py  analyze_locus_AT1G01010.json  analyze_locus_AT1G01010.md  biological_context_AT1G01010.json  biological_context_AT1G01010.md  cross_organism_captures.json  cross_organism_walkthrough.md  find_homologs_AT1G01010_NAC_domain.json  find_homologs_AT1G01010_NAC_domain.md  gene_report_AT1G01010.md  v0.8_synthesis_walkthrough.md
scripts/: benchmark_annotations.expected.json  benchmark_annotations.last_run.json  benchmark_annotations.py  benchmark_failing_loci.py  probe_kegg_bridge_candidates.json  probe_kegg_bridge_candidates.py  probe_kegg_happy_path.json  probe_kegg_happy_path.py  probe_phytozome_namespace.json  probe_phytozome_namespace.py  real_exec_check.py  verify_organisms.py
src/genomics_mcp/: __init__.py  ensembl.py  kegg.py  server.py
src/plant_genomics_mcp/: __init__.py  _http.py  alphafold.py  aragwas.py  atted.py  bar.py  batch.py  blast.py  cache.py  ensembl_plants.py  ensembl_variation.py  errors.py  europe_pmc.py  gprofiler.py  gramene.py  interpro.py  jaspar.py  kegg.py  models.py  onekg.py  organisms.py  orthodb.py  panther.py  pdbe.py  phytozome.py  plantcyc.py  planteome.py  progress.py  prompts.py  quickgo.py  resources.py  server.py  server_http.py  string_db.py  synthesis.py  tair.py  thalemine.py  uniprot.py  validators.py
tests/: conftest.py  test__http.py  test_alphafold.py  test_aragwas.py  test_atted.py  test_bar.py  test_batch.py  test_benchmark_corpus.py  test_benchmark_failing_loci.py  test_benchmark_invariants.py  test_blast.py  test_cache.py  test_ensembl.py  test_ensembl_plants.py  test_ensembl_variation.py  test_europe_pmc.py  test_gprofiler.py  test_gramene.py  test_http_transport.py  test_interpro.py  test_jaspar.py  test_kegg.py  test_onekg.py  test_organisms.py  test_orthodb.py  test_panther.py  test_pdbe.py  test_phytozome.py  test_plantcyc.py  test_planteome.py  test_probe_phytozome_namespace.py  test_progress.py  test_progress_bridge.py  test_prompts.py  test_quickgo.py  test_resources.py  test_server.py  test_server_dispatch.py  test_server_http_slash.py  test_server_schema.py  (+7 more)
