[project]
name = "plant-genomics-mcp"
version = "0.7.0"
description = "Plant genomics MCP — Ensembl Plants + Phytozome + TAIR/PlantCyc redirects for Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jaret Arnold", email = "mjarnold1998@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "starlette>=0.36",
    "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://github.com/mjarnold/plant-genomics-mcp"
Changelog = "https://github.com/mjarnold/plant-genomics-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/mjarnold/plant-genomics-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.3",
]

[project.scripts]
plant-genomics-mcp = "plant_genomics_mcp.server:main"
plant-genomics-mcp-http = "plant_genomics_mcp.server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plant_genomics_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
